门票详情完成

--- a/src/styles/index.less
+++ b/src/styles/index.less
@@ -17,3 +17,46 @@
     font-weight: 600;
     color: #5c5d66;
   }
+  //-----------------------------按钮
+  .an_niu {
+    background-color: #fff;
+    position: fixed;
+    width: 349px;
+    height: 50px;
+    display: flex;
+    bottom: 0;
+    align-items: center;
+    padding: 0 13px;
+    .shi_fu {
+      width: 81px;
+      height: 22px;
+      font-size: 16px;
+      font-family: PingFangSC-Regular, PingFang SC;
+      font-weight: 400;
+      color: rgba(92, 93, 102, 1);
+      line-height: 22px;
+      flex: 3;
+    }
+    .jin_e {
+      width: 79px;
+      height: 25px;
+      font-size: 18px;
+      font-family: PingFangSC-Medium, PingFang SC;
+      font-weight: 500;
+      color: rgba(250, 100, 0, 1);
+      line-height: 25px;
+      flex: 4;
+    }
+    button {
+      font-size: 16px;
+      font-family: PingFangSC-Medium, PingFang SC;
+      background-color: #1890ff;
+      font-weight: 500;
+      color: rgba(255, 255, 255, 1);
+      width: 114px;
+      height: 40px;
+      border: 0;
+      flex: 3;
+    }
+  }
+ // -------------------------------
